--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,6 @@
 # Makefile.am
 
-SUBDIRS = data \
-	  scripts
+SUBDIRS = scripts
 
 pkgdata_DATA = $(PACKAGE)-release
 
@@ -30,15 +29,3 @@ gen-ChangeLog:
 EXTRA_DIST = $(top_srcdir)/.version
 
 ACLOCAL_AMFLAGS = -I m4
-
-DISTCHECK_CONFIGURE_FLAGS = HOME=$(top_distdir) \
-			    --with-bash-alias=@BASH_ALIAS@ \
-			    --with-subversion-alias=@SVN_ALIAS@ \
-			    --with-vim-alias=@VIM_ALIAS@ \
-			    --with-vimrc-example=@VIMRC_EXAMPLE@ \
-			    --with-idea-home=@IDEA_HOME@ \
-			    --with-android-bindir=@ANDROID_BINDIR@
-
-if WITH_GNULIB_SRCDIR
-DISTCHECK_CONFIGURE_FLAGS += --with-gnulib-srcdir=@GNULIB_SRCDIR@
-endif # WITH_GNULIB_SRCDIR
