--- a/scripts/dl-gnu-tool.in
+++ b/scripts/dl-gnu-tool.in
@@ -1,66 +1,72 @@
-#! /bin/env bash
+#! @ENV@ bash
+# vim: ft=sh
+
+set -o pipefail
 
 # functions
 
+source @pkgdatadir@/script-functions
+
 function usage()
 {
-	cat <<- eof
+	cat <<- EOF
 
-	Usage: $(basename $0) -v <version> <tool>
+	Usage: $me -g <version> <tool>
 
-	  -v version
+	  -g GNU tool version
+	  -v verbose output
+	  -V print version
+	  -h print usage
 
 	Examples:
 
-	$(basename $0) -v 2.68 autoconf
+	$me -g 2.68 autoconf
 
-	eof
+	EOF
 } # usage()
 
-while getopts "v:" opt; do
+me="$(basename $0)"
+verbose=''
+
+while getopts 'g:vVh' opt; do
   case $opt in
-    v ) version=$OPTARG ;;
-    \? ) usage; exit 1 ;;
+    g ) version=$OPTARG ;;
+    v ) verbose='true' ;;
+    V ) print_version $me; exit 0 ;;
+    h ) usage; exit 0 ;;
+    \? ) usage >/dev/stderr; exit 1 ;;
   esac
 done
 
 shift $(($OPTIND - 1))
 
 if [[ -z $version ]]; then
-  echo "Must specify version with -v"
-  usage
-  exit 1
+  die "Must specify GNU tool version with -g"
 fi
 
 tool=$1
 
 if [[ -z $tool ]]; then
-  echo "Must specify tool argument"
-  usage
-  exit 1
+  die "Must specify GNU tool argument"
 fi
 
-baseurl="http://ftp.gnu.org/gnu"
-
+baseurl='@GNU_BASE_URL@'
 toolname="$tool-$version"
 archive="$toolname.tar.gz"
 signature="$archive.sig"
 url="$baseurl/$tool/$archive"
 signurl="$baseurl/$tool/$signature"
 
-if ! wget $url; then
-  echo "Failed to download $url"
-  exit 1
+if ! @WGET@ $url; then
+  die "Failed to download $url"
 fi
 
-if ! wget $signurl; then
-  echo "Failed to download $signurl"
-  exit 1
+if ! @WGET@ $signurl; then
+  die "Failed to download $signurl"
 fi
 
 if ! @GPG@ --keyserver-options auto-key-retrieve --verify $signature; then
-  echo "Failed to verfiy signature $signature"
-  exit 1
+  die "Failed to verfiy signature $signature"
 fi
 
-echo "Successfully downloaded $toolname"
+debug "Successfully downloaded $toolname"
