--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -4,10 +4,10 @@
 config-bash
 dl-git
 dl-gnu-tool
-script-functions
 gen-pass
 get-autotools
 get-git
 get-gnu-tool
-s3
+makecscope
+script-functions
 upper2lower
