--- a/scripts/mini.in
+++ b/scripts/mini.in
@@ -15,6 +15,8 @@ function usage()
 
 	  -p device port
 	  -d directory to place capture files
+	  -V print version
+	  -h print usage
 
 	Examples:
 
@@ -28,8 +30,8 @@ date_format='+%Y%m%d-%H%M%S'
 suffix='.log'
 options='--wrap'
 
-
 # variables
+me="$(basename $0)"
 directory=''
 port=''
 
