--- a/scripts/upper2lower.in
+++ b/scripts/upper2lower.in
@@ -1,12 +1,49 @@
+#! @ENV@ bash
+# vim: ft=sh
+
+set -o pipefail
+
+# functions
+
+source @pkgdatadir@/script-functions
+
+function usage()
+{
+	cat <<- EOF
+
+	Usage: $me <filename>...
+
+	  -v verbose output
+	  -V print version
+	  -h print usage
+
+	Examples:
+
+	$me 'MyFile.txt' 'AnotherFile.txt'
+
+	EOF
+} # usage()
+
+me="$(basename $0)"
+verbose=''
+
+while getopts 'vVh' opt; do
+  case $opt in
+    v ) verbose='-v' ;;
+    V ) print_version $me; exit 0 ;;
+    h ) usage; exit 0 ;;
+    \? ) usage >/dev/stderr; exit 1 ;;
+  esac
+done
+
+shift $(($OPTIND - 1))
+
 #! /bin/env bash
 
 for filename in "$@"; do
-  lcasename=$(echo $filename | tr [:upper:] [:lower:])
+  lcasename=$(@TR@ [:upper:] [:lower:] <<<$filename)
 
   if [[ "$filename" != "$lcasename" ]]; then
-
-    @UPPER2LOWER@
-
+    mv -f $filename $lcasename
   fi
-
 done
