--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -43,7 +43,8 @@ make_scripts = dl-git \
 	       pattmv \
 	       space2hyphen \
 	       upper2lower \
-	       weather
+	       weather \
+	       ycm-conan-init
 
 if ENABLE_MINICOM
 make_scripts += mini
@@ -63,6 +64,7 @@ EXTRA_DIST += $(make_sources)
 EDIT = -e 's:@ASCII85[@]:$(ASCII85):g' \
        -e 's:@BASE64[@]:$(BASE64):g' \
        -e 's:@ENV[@]:$(ENV):g' \
+       -e 's:@CONAN[@]:$(CONAN):g' \
        -e 's:@CURL[@]:$(CURL):g' \
        -e 's:@CUT[@]:$(CUT):g' \
        -e 's:@DOS2UNIX[@]:$(DOS2UNIX):g' \
