Issue #8: Refresh project
  * Convert to gnulib/quickhatch submodules
  * Update bootstrap/bootstrap.conf
  * Add bootstrap hook scripts install-{prereqs,reqs}

Signed-off-by: Mike Detwiler <mike@detwiler.io>

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -2,7 +2,7 @@
 
 # vim:filetype=sh
 
-# Copyright (C) 2006-2013 Free Software Foundation, Inc.
+# Copyright (C) 2006-2021 Free Software Foundation, Inc.
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,20 +17,80 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+
+# prefer GitHub's mirror repo
+default_gnulib_url=https://github.com/coreutils/gnulib.git
+
+# Additional gnulib-tool options to use.  Use "\newline" to break lines.
+gnulib_tool_option_extras='--avoid=dummy'
+
+# gnulib modules used by this package.
+gnulib_modules='
+do-release-commit-and-tag
+git-version-gen
+gitlog-to-changelog
+vc-list-files
+'
+
+# gnulib overrides; leave build_aux and m4_base set to bootstrap defaults
+gnulib_basedir=".$package-gnulib"
+source_base="$gnulib_basedir/lib"
+doc_base="$gnulib_basedir/doc"
+tests_base="$gnulib_basedir/tests"
+
 # File that should exist in the top directory of a checked out hierarchy,
 # but not in a distribution tarball.
-checkout_only_file=bootstrap.conf
+checkout_only_file=.gitattributes
 
 # Build prerequisites
-buildreq="\
-make       3.81
-autoconf   2.63
-automake   1.11
-git        1.7
-tar        -
+buildreq='\
+autoconf   2.59
+automake   1.9.6
+git        1.5.5
 gzip       -
-bzip2      -
-"
+tar        -
+'
 
-# Automake requires that ChangeLog exist
-touch ChangeLog || exit 1
+# A function to be called for each unrecognized option.  Returns 0 if
+# the option in $1 has been processed by the function.  Returns 1 if
+# the option has not been processed by the function.  Override it via
+# your own definition in bootstrap.conf
+bootstrap_option_hook()
+{
+    local option=$1
+    case $option in
+	--install-prereqs) build-aux/install-prereqs;;
+	--install-reqs) build-aux/install-reqs;;
+	*) return 1;;
+    esac
+}
+
+# A function to be called in order to print the --help information
+# corresponding to user-defined command-line options.
+bootstrap_print_option_usage_hook()
+{
+    cat <<EOF
+ --install-prereqs        install bootstrap prerequisite packages
+ --install-reqs           install packages required by this package
+EOF
+}
+
+# additional submodules
+submodules='
+quickhatch-autotools
+'
+
+# A function to be called right after gnulib-tool is run.
+# Override it via your own definition in bootstrap.conf.
+bootstrap_post_import_hook()
+{
+    # Automake requires that ChangeLog exist.
+    touch ChangeLog || return 1
+
+    # Update submodules
+    for sm in $submodules; do
+	sm_path=$(git_modules_config submodule.$sm.path)
+	test "x$sm_path" = x && die "Could not determine submodule path for $sm"
+	git submodule update --init $sm_path || return 1
+    done
+}
