--- a/Makefile.am
+++ b/Makefile.am
@@ -2,21 +2,33 @@
 
 SUBDIRS = src
 
-pkgdata_DATA = $(PACKAGE)-release
+gvg_version = $(top_srcdir)/.version
+pkg_name = $(top_srcdir)/.package-name
+pkg_release = $(PACKAGE)-release
 
-CLEANFILES = $(pkgdata_DATA)
+ACLOCAL_AMFLAGS = -I m4 -I .quickhatch/m4
 
-.PHONY: $(PACKAGE)-release
-$(PACKAGE)-release:
-	$(AM_V_GEN)echo "$(PACKAGE) release $(VERSION)" > $@-t && mv $@-t $@
+BUILT_SOURCES = $(gvg_version) \
+		$(pkg_name)
 
-BUILT_SOURCES = $(top_srcdir)/.version
+pkgdata_DATA = $(pkg_release)
 
-$(top_srcdir)/.version:
+CLEANFILES = $(gvg_version) \
+	     $(pkg_name) \
+	     $(pkg_release)
+
+EXTRA_DIST = $(gvg_version) \
+	     m4/gnulib-cache.m4 \
+	     README.md
+
+$(gvg_version):
 	$(AM_V_GEN)echo $(VERSION) > $@-t && mv $@-t $@
 
-dist-hook: gen-ChangeLog
-	$(AM_V_GEN)echo $(VERSION) > $(distdir)/.tarball-version
+$(pkg_name):
+	$(AM_V_GEN)echo $(PACKAGE_NAME) > $@-t && mv $@-t $@
+
+$(pkg_release): $(gvg_version)
+	$(AM_V_GEN)echo "$(PACKAGE) release $(VERSION)" > $@-t && mv $@-t $@
 
 .PHONY: gen-ChangeLog
 gen-ChangeLog:
@@ -26,8 +38,8 @@ gen-ChangeLog:
 	  mv $(distdir)/cl-t $(distdir)/ChangeLog;			\
 	fi
 
-EXTRA_DIST = $(top_srcdir)/.version \
-	     m4/gnulib-cache.m4 \
-	     README.md
+.PHONY: gen-tarball-version
+gen-tarball-version:
+	$(AM_V_GEN)echo $(VERSION) > $(distdir)/.tarball-version
 
-ACLOCAL_AMFLAGS = -I m4 -I .quickhatch/m4
+dist-hook: gen-ChangeLog gen-tarball-version
