--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,6 @@ pkgdata_DATA += $(make_data)
 
 make_scripts = dl-git \
 	       dl-gnu-tool \
-	       gen-pass \
 	       get-autotools \
 	       get-git \
 	       get-gnu-tool \
@@ -46,10 +45,16 @@ make_scripts = dl-git \
 	       weather \
 	       ycm-conan-init
 
+if HAVE_BASENC
+make_scripts += gen-pass
+endif
+
 if ENABLE_MINICOM
 make_scripts += mini
 endif
-EXTRA_DIST += mini.in
+
+EXTRA_DIST += gen-pass.in \
+	      mini.in
 
 bin_SCRIPTS += $(make_scripts)
 
